<resources>
    <string name="app_name">Food Finder</string>
    <string name="txtTitle">Food Finder</string>
    <string name="txtAmerican">American Cuisine</string>
    <string name="txtAsian">Asian Cuisine</string>
    <string name="txtItalian">Italian Cuisine</string>
    <string name="txtLatino">Latino Cuisine</string>
    <string name="image1">American Cuisine</string>
    <string name="image2">Asian Cuisine</string>
    <string name="image3">Italian Cuisine</string>
    <string name="image4">Latino Cuisine</string>
    <string name="txtAmerican1">All American\nDiner</string>
    <string name="americanImage1">All American Diner</string>
    <string name="txtAmerican3">Denny\'s</string>
    <string name="americanImage3">Denny\'s</string>
    <string name="americanImage2">Brick House Cafe</string>
    <string name="txtAmerican2">Brick House\nCafe</string>
    <string name="brickHouseTitle">Brick House Cafe</string>
    <string name="brickHouseAddress1">86 S Main Street</string>
    <string name="cityAdd">Cedar City, UT  84720</string>
    <string name="brickHouseContact">(435) 586-5344</string>
    <string name="dennysAddress">255 N 1100 W</string>
    <string name="dennysContact">(435) 867-0213</string>
    <string name="allAmericanAddress">501 S Main Street</string>
    <string name="allAmericanContact">(435) 867-4211</string>
    <string name="button">Visit Web Site</string>
    <string name="allAmericanTitle">All American Diner</string>
    <string name="dennysTitle">Denny\'s</string>
    <string name="asianImage1">Asian Bistro</string>
    <string name="asianImage2">China Kitchen</string>
    <string name="asianImage3">Sweet Basil\nThai Cuisine</string>
    <string name="asianBistroAddress">1380 S Providence Center Dr</string>
    <string name="asianBistroContact">(435) 263-500</string>
    <string name="asianBistroTitle">Asian\nBistro</string>
    <string name="chinaKitchenTitle">China\nKitchen</string>
    <string name="chinaKitchenContact">(435) 865-2858</string>
    <string name="taiTitle">Sweet Basil\nThai Cuisine</string>
    <string name="taiAddress">1322 S Providence Center Dr</string>
    <string name="taiContact">(435) 865-5937</string>
    <string name="asianBistroAddress2">Suite A</string>
    <string name="chinaKitchenAddress">200 N 1150 W</string>
    <string name="italianImage1">Chef Alfredos Ristorante Italiano</string>
    <string name="chefAddress1">2313 W Hwy 56 Suite 1</string>
    <string name="chefContact">(435) 586-2693</string>
    <string name="italianImage2">The Hub Pizza and More</string>
    <string name="hubAddress1">2002 N Main Street Suite 5</string>
    <string name="hubAddress2">Ste 5</string>
    <string name="cityAdd2">Cedar City, UT  84721</string>
    <string name="hubContact">(435) 263-0120</string>
    <string name="italianImage3">Pizza Hut</string>
    <string name="pizzaHutTitle">Pizza Hut</string>
    <string name="pizzaHutAddress">579 S Main Street</string>
    <string name="pizzaHutContact">(435) 586-9896</string>
    <string name="chefTitle">Chef Alfredos\nRistorante Italiano</string>
    <string name="hubTitle">The Hub Pizza\nand More</string>
    <string name="latinoImage1">Brody\'s Mexican Restaurant</string>
    <string name="latinoImage2">Lupita\'s Mexican Restaurant</string>
    <string name="latinoImage3">Puerto Vallarta Jalisco</string>
    <string name="vallartaTitle">Puerto Vallarta\nJalisco</string>
    <string name="vallartaAddress">1575 W 200 N</string>
    <string name="vallartaContact">(435) 263-0633</string>
    <string name="lupitasTitle">Lupita\'s Mexican\nRestaurant</string>
    <string name="lupitasAddress">2052 Cross Hollow Rd</string>
    <string name="lupitasContact">(435) 867-0945</string>
    <string name="brodysTitle">Brody\'s Mexican\nRestaurant</string>
    <string name="brodysAddress1">1166 S Sage Dr Suite C</string>
    <string name="brodysContact">(435) 531-8773</string>
</resources>
