<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/txtTitle"
        android:textAllCaps="true"
        android:textColor="#03A9F4"
        android:textSize="50sp"
        android:textStyle="italic"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnAmerican"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/image1"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/btnAsian"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:srcCompat="@drawable/cheeseburger" />

    <TextView
        android:id="@+id/american"
        android:layout_width="164dp"
        android:layout_height="33dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/txtAmerican"
        android:textAllCaps="true"
        android:textColor="#E91E63"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAmerican" />

    <ImageButton
        android:id="@+id/btnAsian"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:contentDescription="@string/image2"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAmerican"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:srcCompat="@drawable/takeaway" />

    <TextView
        android:id="@+id/chinese"
        android:layout_width="136dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:gravity="center"
        android:text="@string/txtAsian"
        android:textAllCaps="true"
        android:textColor="#E91E63"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAsian" />

    <ImageButton
        android:id="@+id/btnItalian"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/image3"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/btnMexican"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/american"
        app:srcCompat="@drawable/pizza" />

    <TextView
        android:id="@+id/pizza"
        android:layout_width="147dp"
        android:layout_height="36dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/txtItalian"
        android:textAllCaps="true"
        android:textColor="#E91E63"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnItalian" />

    <ImageButton
        android:id="@+id/btnMexican"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:contentDescription="@string/image4"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnItalian"
        app:layout_constraintTop_toBottomOf="@+id/chinese"
        app:srcCompat="@drawable/quesadilla" />

    <TextView
        android:id="@+id/mexican"
        android:layout_width="146dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:text="@string/txtLatino"
        android:textAllCaps="true"
        android:textColor="#E91E63"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMexican" />

</androidx.constraintlayout.widget.ConstraintLayout>